--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.3.173</version>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
@@ -183,13 +183,8 @@
 			<version>${mybatis.spring.version}</version>
 		</dependency>
 
-		<!-- MySQL JDBC Connector
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.24</version>
-		</dependency>
-		-->
+		<!-- MySQL JDBC Connector <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
+			<version>5.1.24</version> </dependency> -->
 
 		<dependency>
 			<groupId>commons-fileupload</groupId>
