Add start listener before spring servlet.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -69,6 +69,9 @@
 	</jsp-config>
 
 	<listener>
+		<listener-class>cn.clxy.ssm.common.web.WebAppListener</listener-class>
+	</listener>
+	<listener>
 		<listener-class>cn.clxy.ssm.common.web.SessionListener</listener-class>
 	</listener>
 </web-app>
