--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<logback.version>1.0.9</logback.version>
 		<slf4j.version>1.7.2</slf4j.version>
 
-		<jackson.version>2.2.0</jackson.version>
+		<jackson.version>2.2.3</jackson.version>
 
 		<mybatis.version>3.2.2</mybatis.version>
 		<mybatis.spring.version>1.2.0</mybatis.spring.version>
@@ -150,7 +150,7 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
-		
+
 		<!-- Logging with SLF4J & LogBack -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -173,6 +173,11 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-csv</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 
